more detail explaination in data sample

--- a/DataSample.ipynb
+++ b/DataSample.ipynb
@@ -25,7 +25,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,48 +37,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_dataset = PatientDiffLoader(\"./data/data.tsv\")\n",
-    "loader = DataLoader(full_dataset, shuffle=True, batch_size=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "Patient_39.Timepoint_6\nPatient_01.Timepoint_3\nPatient_23.Timepoint_5\nPatient_26.Timepoint_2\nPatient_52.Timepoint_7\ntensor([[3318015000, 2876175000, 7754450000,  ...,         -1,         -1,\n                 -1],\n        [2864495000, 1523392500, 5175725000,  ...,         -1,         -1,\n                 -1],\n        [5615050000, 2470575000, 7948100000,  ...,         -1,         -1,\n                 -1],\n        [3451452500, 1716390000, 7130300000,  ...,         -1,         -1,\n                 -1],\n        [3896100000, 2198920000, 6660125000,  ...,         -1,         -1,\n                 -1]]) tensor([[3318015000, 2876175000, 7754450000,  ...,         -1,         -1,\n                 -1],\n        [2864495000, 1523392500, 5175725000,  ...,         -1,         -1,\n                 -1],\n        [6635400000, 2866887500, 7152400000,  ...,         -1,         -1,\n                 -1],\n        [3451452500, 1716390000, 7130300000,  ...,         -1,         -1,\n                 -1],\n        [2619665000, 1307067500, 4487925000,  ...,         -1,         -1,\n                 -1]])\n"
-    }
-   ],
-   "source": [
+    "full_dataset = PatientDiffLoader(\"./data/data.tsv\", toLog = True) # getting log\n",
+    "loader = DataLoader(full_dataset, shuffle=True, batch_size=1)\n",
     "for one, two, same in loader:\n",
-    "    print(one, two)\n",
+    "    print(one,\"\\n\", two,\"\\n\", same)\n",
     "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "tensor([[3318015000, 2876175000, 7754450000,  ...,         -1,         -1,\n                 -1],\n        [2864495000, 1523392500, 5175725000,  ...,         -1,         -1,\n                 -1],\n        [5615050000, 2470575000, 7948100000,  ...,         -1,         -1,\n                 -1],\n        [3451452500, 1716390000, 7130300000,  ...,         -1,         -1,\n                 -1],\n        [3896100000, 2198920000, 6660125000,  ...,         -1,         -1,\n                 -1]])\ntensor([[3318015000, 2876175000, 7754450000,  ...,         -1,         -1,\n                 -1],\n        [2864495000, 1523392500, 5175725000,  ...,         -1,         -1,\n                 -1],\n        [6635400000, 2866887500, 7152400000,  ...,         -1,         -1,\n                 -1],\n        [3451452500, 1716390000, 7130300000,  ...,         -1,         -1,\n                 -1],\n        [2619665000, 1307067500, 4487925000,  ...,         -1,         -1,\n                 -1]])\ntensor([[1.],\n        [1.],\n        [1.],\n        [1.],\n        [0.]])\n"
+     "text": "Patient_21.Timepoint_4\ntensor([[ True,  True,  True,  ..., False, False, False]]) \n tensor([[ True,  True,  True,  ..., False, False, False]]) \n tensor([[0.]])\n"
     }
    ],
    "source": [
-    "print(one)\n",
+    "full_dataset = PatientDiffLoader(\"./data/data.tsv\", toBin = True) # getting binary\n",
+    "loader = DataLoader(full_dataset, shuffle=True, batch_size=1)\n",
+    "for one, two, same in loader:\n",
+    "    print(one,\"\\n\", two,\"\\n\", same)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Patient_36.Timepoint_4\ntensor([[5745625000, 4006375000, 9916175000,  ...,          0,          0,\n                  0]]) \n tensor([[4893175000, 1332197500, 7174775000,  ...,          0,          0,\n                  0]]) \n tensor([[0.]])\n"
+    }
+   ],
+   "source": [
+    "full_dataset.toBin = False #\n",
     "\n",
-    "print(two)\n",
-    "\n",
-    "print(same)"
+    "for one, two, same in loader:\n",
+    "    print(one,\"\\n\", two,\"\\n\", same)\n",
+    "    break"
    ]
   },
   {
