Updated v2 Data analysis notebook

--- a/DataAnalysis-v2.ipynb
+++ b/DataAnalysis-v2.ipynb
@@ -6,7 +6,7 @@
     "id": "Zh_FkgR00zpY"
    },
    "source": [
-    "### <font color='blue'>**Data Exploration**\n",
+    "### <font color='blue'>**Data Exploration + XGBoost starter model**\n",
     "    Pulled from Eric's notebook\n"
    ]
   },
@@ -394,6 +394,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# using 1k samples for train/val/test finishes fast, but may not be accurate\n",
+    "# so we should train with more samples (~100K train/val/test) with colab/gpu later, which would take more time\n",
     "num_train_samples = 10000\n",
     "num_val_samples = 10000\n",
     "num_test_samples = 10000"
@@ -481,9 +483,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10000it [00:04, 2322.45it/s]\n",
-      "10000it [00:06, 1615.45it/s]\n",
-      "10000it [00:06, 1658.54it/s]\n"
+      "10000it [00:04, 2332.82it/s]\n",
+      "10000it [00:05, 1692.23it/s]\n",
+      "10000it [00:06, 1506.25it/s]\n"
      ]
     }
    ],
@@ -535,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,12 +556,13 @@
     "id": "yJAvFabadQuR"
    },
    "source": [
-    "### <font color='blue'>**XGBoost Classifier**"
+    "### <font color='blue'>**XGBoost Classifier**\n",
+    "Initial log loss should be around $0.69$, since $-ln(0.5) = 0.6931471806$ and there is a $0.5$ probability of same/different patient"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,13 +605,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[14:57:48] WARNING: /Users/travis/build/dmlc/xgboost/src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+      "[0]\tvalidation_0-logloss:0.68995\n",
+      "[1]\tvalidation_0-logloss:0.67595\n",
+      "[2]\tvalidation_0-logloss:0.67716\n",
+      "[3]\tvalidation_0-logloss:0.66137\n",
+      "[4]\tvalidation_0-logloss:0.64409\n",
+      "[5]\tvalidation_0-logloss:0.64687\n",
+      "[6]\tvalidation_0-logloss:0.64744\n",
+      "[7]\tvalidation_0-logloss:0.64738\n",
+      "[8]\tvalidation_0-logloss:0.64494\n",
+      "[9]\tvalidation_0-logloss:0.59304\n",
+      "[10]\tvalidation_0-logloss:0.59140\n",
+      "[11]\tvalidation_0-logloss:0.57336\n",
+      "[12]\tvalidation_0-logloss:0.56571\n",
+      "[13]\tvalidation_0-logloss:0.56120\n",
+      "[14]\tvalidation_0-logloss:0.56080\n",
+      "[15]\tvalidation_0-logloss:0.54087\n",
+      "[16]\tvalidation_0-logloss:0.52551\n",
+      "[17]\tvalidation_0-logloss:0.50876\n",
+      "[18]\tvalidation_0-logloss:0.50779\n",
+      "[19]\tvalidation_0-logloss:0.48774\n",
+      "[20]\tvalidation_0-logloss:0.48405\n",
+      "[21]\tvalidation_0-logloss:0.48512\n",
+      "[22]\tvalidation_0-logloss:0.48524\n",
+      "[23]\tvalidation_0-logloss:0.47938\n",
+      "[24]\tvalidation_0-logloss:0.48048\n",
+      "[25]\tvalidation_0-logloss:0.48005\n",
+      "[26]\tvalidation_0-logloss:0.48052\n",
+      "[27]\tvalidation_0-logloss:0.46323\n",
+      "[28]\tvalidation_0-logloss:0.46518\n",
+      "[29]\tvalidation_0-logloss:0.45676\n",
+      "[30]\tvalidation_0-logloss:0.45545\n",
+      "[31]\tvalidation_0-logloss:0.42957\n",
+      "[32]\tvalidation_0-logloss:0.42030\n",
+      "[33]\tvalidation_0-logloss:0.41936\n",
+      "[34]\tvalidation_0-logloss:0.41396\n",
+      "[35]\tvalidation_0-logloss:0.41368\n",
+      "[36]\tvalidation_0-logloss:0.41076\n",
+      "[37]\tvalidation_0-logloss:0.40752\n",
+      "[38]\tvalidation_0-logloss:0.37638\n",
+      "[39]\tvalidation_0-logloss:0.38079\n",
+      "[40]\tvalidation_0-logloss:0.36690\n",
+      "[41]\tvalidation_0-logloss:0.36451\n",
+      "[42]\tvalidation_0-logloss:0.35471\n",
+      "[43]\tvalidation_0-logloss:0.35409\n",
+      "[44]\tvalidation_0-logloss:0.35154\n",
+      "[45]\tvalidation_0-logloss:0.35483\n",
+      "[46]\tvalidation_0-logloss:0.35667\n",
+      "[47]\tvalidation_0-logloss:0.35699\n",
+      "[48]\tvalidation_0-logloss:0.35386\n",
+      "[49]\tvalidation_0-logloss:0.34487\n",
+      "[50]\tvalidation_0-logloss:0.34323\n",
+      "[51]\tvalidation_0-logloss:0.34173\n",
+      "[52]\tvalidation_0-logloss:0.34176\n",
+      "[53]\tvalidation_0-logloss:0.32877\n",
+      "[54]\tvalidation_0-logloss:0.31688\n",
+      "[55]\tvalidation_0-logloss:0.30617\n",
+      "[56]\tvalidation_0-logloss:0.32648\n",
+      "[57]\tvalidation_0-logloss:0.32146\n",
+      "[58]\tvalidation_0-logloss:0.30171\n",
+      "[59]\tvalidation_0-logloss:0.30174\n",
+      "[60]\tvalidation_0-logloss:0.29987\n",
+      "[61]\tvalidation_0-logloss:0.30416\n",
+      "[62]\tvalidation_0-logloss:0.30569\n",
+      "[63]\tvalidation_0-logloss:0.30891\n",
+      "[64]\tvalidation_0-logloss:0.30728\n",
+      "[65]\tvalidation_0-logloss:0.30649\n",
+      "[66]\tvalidation_0-logloss:0.30810\n",
+      "[67]\tvalidation_0-logloss:0.29990\n",
+      "[68]\tvalidation_0-logloss:0.29875\n",
+      "[69]\tvalidation_0-logloss:0.29906\n"
      ]
     }
    ],
    "source": [
-    "model = XGBClassifier(use_label_encoder=False)\n",
-    "model.fit(train_dataX, train_dataY)"
+    "model = XGBClassifier(use_label_encoder=False, max_depth=3)\n",
+    "model.fit(train_dataX, train_dataY, eval_metric=\"logloss\", eval_set=[(val_dataX, val_dataY)], verbose=True)"
    ]
   },
   {
