Updated v2 Data analysis notebook

--- a/DataAnalysis-v2.ipynb
+++ b/DataAnalysis-v2.ipynb
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -674,8 +674,56 @@
       "[66]\tvalidation_0-logloss:0.30810\n",
       "[67]\tvalidation_0-logloss:0.29990\n",
       "[68]\tvalidation_0-logloss:0.29875\n",
-      "[69]\tvalidation_0-logloss:0.29906\n"
+      "[69]\tvalidation_0-logloss:0.29906\n",
+      "[70]\tvalidation_0-logloss:0.28670\n",
+      "[71]\tvalidation_0-logloss:0.28104\n",
+      "[72]\tvalidation_0-logloss:0.28092\n",
+      "[73]\tvalidation_0-logloss:0.28061\n",
+      "[74]\tvalidation_0-logloss:0.28008\n",
+      "[75]\tvalidation_0-logloss:0.27011\n",
+      "[76]\tvalidation_0-logloss:0.26825\n",
+      "[77]\tvalidation_0-logloss:0.26653\n",
+      "[78]\tvalidation_0-logloss:0.26358\n",
+      "[79]\tvalidation_0-logloss:0.26039\n",
+      "[80]\tvalidation_0-logloss:0.24200\n",
+      "[81]\tvalidation_0-logloss:0.22989\n",
+      "[82]\tvalidation_0-logloss:0.23208\n",
+      "[83]\tvalidation_0-logloss:0.22346\n",
+      "[84]\tvalidation_0-logloss:0.22070\n",
+      "[85]\tvalidation_0-logloss:0.22028\n",
+      "[86]\tvalidation_0-logloss:0.21007\n",
+      "[87]\tvalidation_0-logloss:0.20306\n",
+      "[88]\tvalidation_0-logloss:0.20042\n",
+      "[89]\tvalidation_0-logloss:0.19195\n",
+      "[90]\tvalidation_0-logloss:0.19585\n",
+      "[91]\tvalidation_0-logloss:0.18945\n",
+      "[92]\tvalidation_0-logloss:0.18357\n",
+      "[93]\tvalidation_0-logloss:0.18068\n",
+      "[94]\tvalidation_0-logloss:0.17969\n",
+      "[95]\tvalidation_0-logloss:0.18593\n",
+      "[96]\tvalidation_0-logloss:0.19011\n",
+      "[97]\tvalidation_0-logloss:0.18945\n",
+      "[98]\tvalidation_0-logloss:0.18279\n",
+      "[99]\tvalidation_0-logloss:0.17018\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "              colsample_bynode=1, colsample_bytree=1, gamma=0, gpu_id=-1,\n",
+       "              importance_type='gain', interaction_constraints='',\n",
+       "              learning_rate=0.300000012, max_delta_step=0, max_depth=3,\n",
+       "              min_child_weight=1, missing=nan, monotone_constraints='()',\n",
+       "              n_estimators=100, n_jobs=8, num_parallel_tree=1, random_state=0,\n",
+       "              reg_alpha=0, reg_lambda=1, scale_pos_weight=1, subsample=1,\n",
+       "              tree_method='exact', use_label_encoder=False,\n",
+       "              validate_parameters=1, verbosity=None)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -685,9 +733,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion matrix:\n",
+      " [[5005    0]\n",
+      " [   0 4995]]\n",
+      "\n",
+      "Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00      5005\n",
+      "           1       1.00      1.00      1.00      4995\n",
+      "\n",
+      "    accuracy                           1.00     10000\n",
+      "   macro avg       1.00      1.00      1.00     10000\n",
+      "weighted avg       1.00      1.00      1.00     10000\n",
+      "\n",
+      "Train accuracy -  1.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Train metrics\n",
     "train_ypred = model.predict(train_dataX)\n",
@@ -701,9 +771,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion matrix:\n",
+      " [[4904   17]\n",
+      " [ 525 4554]]\n",
+      "\n",
+      "Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      1.00      0.95      4921\n",
+      "           1       1.00      0.90      0.94      5079\n",
+      "\n",
+      "    accuracy                           0.95     10000\n",
+      "   macro avg       0.95      0.95      0.95     10000\n",
+      "weighted avg       0.95      0.95      0.95     10000\n",
+      "\n",
+      "Val accuracy -  0.9458\n"
+     ]
+    }
+   ],
    "source": [
     "# Validation metrics\n",
     "val_ypred = model.predict(val_dataX)\n",
@@ -717,9 +809,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion matrix:\n",
+      " [[8952    2]\n",
+      " [  91  955]]\n",
+      "\n",
+      "Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      1.00      0.99      8954\n",
+      "           1       1.00      0.91      0.95      1046\n",
+      "\n",
+      "    accuracy                           0.99     10000\n",
+      "   macro avg       0.99      0.96      0.97     10000\n",
+      "weighted avg       0.99      0.99      0.99     10000\n",
+      "\n",
+      "Test accuracy -  0.9907\n"
+     ]
+    }
+   ],
    "source": [
     "# Test metrics\n",
     "test_ypred = model.predict(test_dataX)\n",
