Updated v2 Data analysis notebook

--- a/DataAnalysis-v2.ipynb
+++ b/DataAnalysis-v2.ipynb
@@ -910,6 +910,107 @@
     "\n",
     "print(\"Test accuracy - \", test_accuracy)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "540"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ft = model.feature_importances_\n",
+    "len(ft[ft > 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([    0,     3,     4,    10,    12,    15,    18,    57,    58,\n",
+       "         113,   126,   143,   184,   206,   276,   301,   340,   373,\n",
+       "         400,   406,   496,   499,   588,   599,   603,   607,   608,\n",
+       "         614,   634,   667,   687,   696,   699,   713,   757,   779,\n",
+       "         820,   896,   913,   956,   978,   983,   991,  1054,  1068,\n",
+       "        1071,  1098,  1119,  1171,  1193,  1194,  1203,  1220,  1232,\n",
+       "        1351,  1398,  1471,  1546,  1633,  1664,  1722,  1729,  1757,\n",
+       "        1783,  1805,  1809,  1817,  1822,  1837,  1865,  1913,  1948,\n",
+       "        1966,  1969,  1970,  2093,  2097,  2108,  2139,  2157,  2161,\n",
+       "        2198,  2230,  2242,  2295,  2302,  2313,  2317,  2323,  2354,\n",
+       "        2357,  2361,  2401,  2482,  2493,  2534,  2583,  2598,  2649,\n",
+       "        2701,  2730,  2760,  2849,  2890,  2903,  2945,  2969,  2977,\n",
+       "        2981,  2998,  3026,  3035,  3040,  3069,  3158,  3162,  3271,\n",
+       "        3304,  3394,  3410,  3418,  3426,  3557,  3572,  3585,  3615,\n",
+       "        3717,  3726,  3747,  3800,  3831,  3910,  3920,  3942,  3989,\n",
+       "        3996,  4014,  4031,  4061,  4086,  4113,  4125,  4166,  4227,\n",
+       "        4232,  4298,  4362,  4369,  4412,  4417,  4466,  4472,  4505,\n",
+       "        4567,  4606,  4613,  4636,  4639,  4657,  4676,  4722,  4800,\n",
+       "        4812,  4827,  4855,  4860,  4923,  4953,  4954,  4957,  5024,\n",
+       "        5136,  5158,  5216,  5276,  5313,  5389,  5441,  5499,  5530,\n",
+       "        5587,  5589,  5618,  5626,  5638,  5686,  5687,  5703,  5858,\n",
+       "        5895,  5916,  5922,  5951,  6228,  6270,  6280,  6455,  6582,\n",
+       "        6645,  6825,  6878,  6920,  7029,  7130,  7241,  7246,  7297,\n",
+       "        7323,  7440,  7457,  7579,  7619,  7622,  7658,  7682,  7683,\n",
+       "        7732,  7745,  7747,  7816,  7826,  8077,  8315,  8550,  8651,\n",
+       "        8848,  8856,  9197,  9272,  9374,  9543,  9579,  9633,  9975,\n",
+       "       10006, 10016, 10151, 10341, 10474, 10849, 10999, 11252, 11556,\n",
+       "       11819, 11983, 12201, 12429, 12526, 13364, 14250, 14412, 14758,\n",
+       "       14778, 15318, 15547, 15866, 15918, 16763, 17617, 17932, 18648,\n",
+       "       19871, 20795, 21316, 21630, 21913, 23895, 24899, 26966, 27412,\n",
+       "       40921, 40926, 40927, 40935, 40944, 40948, 40963, 40971, 41026,\n",
+       "       41039, 41042, 41052, 41064, 41065, 41104, 41180, 41197, 41227,\n",
+       "       41253, 41254, 41255, 41261, 41294, 41311, 41327, 41365, 41371,\n",
+       "       41415, 41424, 41457, 41529, 41535, 41542, 41555, 41568, 41588,\n",
+       "       41590, 41628, 41678, 41679, 41738, 41744, 41751, 41806, 41853,\n",
+       "       41877, 41912, 41949, 41954, 41975, 42022, 42053, 42094, 42114,\n",
+       "       42138, 42153, 42184, 42209, 42242, 42264, 42284, 42304, 42305,\n",
+       "       42333, 42370, 42383, 42424, 42467, 42468, 42554, 42596, 42631,\n",
+       "       42678, 42726, 42730, 42732, 42777, 42813, 42827, 42850, 42887,\n",
+       "       42890, 42891, 42926, 43018, 43022, 43029, 43044, 43151, 43163,\n",
+       "       43169, 43216, 43223, 43244, 43278, 43282, 43374, 43414, 43423,\n",
+       "       43436, 43440, 43496, 43504, 43578, 43610, 43619, 43638, 43660,\n",
+       "       43725, 43759, 43770, 43824, 43855, 43866, 43890, 43947, 43956,\n",
+       "       43961, 44010, 44066, 44079, 44115, 44126, 44257, 44315, 44323,\n",
+       "       44339, 44410, 44422, 44424, 44506, 44516, 44518, 44526, 44531,\n",
+       "       44536, 44564, 44603, 44638, 44668, 44691, 44809, 44841, 44863,\n",
+       "       44910, 44935, 45007, 45034, 45053, 45068, 45087, 45089, 45146,\n",
+       "       45148, 45153, 45166, 45219, 45256, 45283, 45290, 45333, 45338,\n",
+       "       45387, 45404, 45420, 45426, 45527, 45534, 45541, 45560, 45643,\n",
+       "       45721, 45748, 45776, 45781, 45839, 45867, 45926, 46031, 46079,\n",
+       "       46092, 46130, 46137, 46226, 46227, 46234, 46241, 46262, 46265,\n",
+       "       46362, 46469, 46510, 46559, 46567, 46609, 46624, 46672, 46779,\n",
+       "       46872, 47146, 47201, 47272, 47300, 47401, 47516, 47520, 47623,\n",
+       "       47709, 47746, 47950, 48162, 48180, 48188, 48218, 48550, 48642,\n",
+       "       48698, 48731, 48747, 49070, 49206, 49421, 49482, 49572, 49670,\n",
+       "       49719, 49769, 49777, 49807, 49948, 50118, 50163, 50193, 50207,\n",
+       "       50554, 50766, 50896, 51472, 51538, 52378, 52477, 52627, 52740,\n",
+       "       52880, 52904, 52927, 53232, 53288, 53447, 53881, 53898, 54350,\n",
+       "       55668, 55670, 55699, 56100, 56239, 56414, 56468, 57034, 57678,\n",
+       "       57684, 58937, 60010, 60792, 61676, 61751, 67800, 67887, 72595])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "important_peptide_indices = np.where(ft > 0)[0]\n",
+    "important_peptide_indices"
+   ]
   }
  ],
  "metadata": {
